feat: add additional blocks

--- a/public/index.html
+++ b/public/index.html
@@ -191,10 +191,10 @@
 				<!-- start sRegistration-->
 				<section class="sRegistration section" id="sRegistration">
 					<div class="sRegistration__container container">
-						<div class="sRegistration__wrap">
+						<div class="sRegistration__wrap"><img class="img" src="img/coins-2.png" alt="" loading="lazy"/>
 							<div class="section-title text-center">
 								<h2>Регистрация</h2>
-								<p>Регистрация на участие в программе проходит в два потока: </p>
+								<p>Регистрация на участие в программе проходит в два потока:</p>
 							</div>
 							<div class="sRegistration__row">
 								<div class="row">
@@ -249,16 +249,52 @@
 				<section class="sDirections section" id="sDirections">
 					<div class="container">
 						<div class="section-title text-center">
-							<h2>sDirections</h2>
+							<h2>Обучаем по направлениям:</h2>
 						</div>
 						<div class="sDirections__row row">
+							<div class="sDirections__col col-md-6">
+								<div class="direction-item">
+									<div class="text-center"><img src="img/directions-img-1.png" alt="" loading="lazy"/>
+									</div>
+									<div class="direction-item__text">Классическое
+									</div>
+								</div>
+							</div>
+							<div class="sDirections__col col-md-6">
+								<div class="direction-item">
+									<div class="text-center"><img src="img/directions-img-2.png" alt="" loading="lazy"/>
+									</div>
+									<div class="direction-item__text">Социальное
+									</div>
+								</div>
+							</div>
+							<div class="sDirections__col col-md-6">
+								<div class="direction-item">
+									<div class="text-center"><img src="img/directions-img-3.png" alt="" loading="lazy"/>
+									</div>
+									<div class="direction-item__text">Технологическое
+									</div>
+								</div>
+							</div>
+							<div class="sDirections__col col-md-6">
+								<div class="direction-item">
+									<div class="text-center"><img src="img/directions-img-4.png" alt="" loading="lazy"/>
+									</div>
+									<div class="direction-item__text">Креативное
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="text-center">
+							<div class="sDirections__btn btn btn-primary">ПРЕДПРИНИМАТЕЛЬСТВО
+							</div>
 						</div>
 					</div>
 				</section>
 				<!-- end sDirections-->
 				<!-- start sFAQ-->
 				<section class="sFAQ section" id="sFAQ">
-					<div class="sFAQ__container container"><img class="bg" src="img/sFAQ-bg-1.png" alt="" loading="lazy"/>
+					<div class="sFAQ__container container"><img class="img" src="img/coins-2.png" alt="" loading="lazy"/><img class="bg" src="img/sFAQ-bg-1.png" alt="" loading="lazy"/>
 						<div class="section-title">
 							<h2>Часто задаваемые вопросы:</h2>
 						</div>
@@ -298,10 +334,82 @@
 				<!-- start sExperts-->
 				<section class="sExperts section" id="sExperts">
 					<div class="container">
-						<div class="section-title text-center">
-							<h2>sExperts</h2>
+						<div class="sExperts__item item_orange">
+							<div class="sExperts__row row">
+								<div class="col-lg-7">
+									<h2>Очный этап</h2>
+									<p>40 лучших участников получат шанс представить свой проект представить свой проект на очной инвест-сессии перед экспертами!</p>
+								</div>
+								<div class="sExperts__col col"><img class="img" src="img/experts-img.png" alt="" loading="lazy"/>
+								</div>
+							</div>
 						</div>
-						<div class="sExperts__row row">
+						<div class="sExperts__item item_white">
+							<div class="section-title text-center">
+								<h2>Эксперты</h2>
+							</div>
+							<div class="sExperts__slider sExperts__slider--js">
+								<div class="swiper-button-hand swiper-button-hand-prev swiper-button-prev">
+									<svg class="icon icon-arrow ">
+										<use xlink:href="img/svg/sprite.svg#arrow"></use>
+									</svg>
+								</div>
+								<div class="swiper-button-hand swiper-button-hand-next swiper-button-next">
+									<svg class="icon icon-arrow ">
+										<use xlink:href="img/svg/sprite.svg#arrow"></use>
+									</svg>
+								</div>
+								<div class="swiper-wrapper">
+									<div class="sExperts__slide swiper-slide">
+										<div class="person-card">
+											<div class="person-card__img-wrap text-center"><img src="img/sExpert-img.png" alt="" loading="lazy"/>
+											</div>
+											<div class="person-card__content text-center">
+												<div class="person-card__name">Мансуров Олег Геннадьевич
+												</div>
+												<div class="person-card__text">Генеральный директор космической компании SR Space. Создатель и руководитель программы  по развитию предпринимательства «Преактум». Преподаватель в Московском политехническом  университете предмет «Трансфер технологий и технологическое предпринимательство». Разработчик проекта «Цифровой прорыв»
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="sExperts__slide swiper-slide">
+										<div class="person-card">
+											<div class="person-card__img-wrap text-center"><img src="img/sExpert-img.png" alt="" loading="lazy"/>
+											</div>
+											<div class="person-card__content text-center">
+												<div class="person-card__name">Мансуров Олег Геннадьевич
+												</div>
+												<div class="person-card__text">Генеральный директор космической компании SR Space. Создатель и руководитель программы  по развитию предпринимательства «Преактум».
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="sExperts__slide swiper-slide">
+										<div class="person-card">
+											<div class="person-card__img-wrap text-center"><img src="img/sExpert-img.png" alt="" loading="lazy"/>
+											</div>
+											<div class="person-card__content text-center">
+												<div class="person-card__name">Мансуров Олег Геннадьевич
+												</div>
+												<div class="person-card__text">Генеральный директор космической компании SR Space. Создатель и руководитель программы  по развитию предпринимательства «Преактум». Преподаватель в Московском политехническом  университете предмет «Трансфер технологий и технологическое предпринимательство». Разработчик проекта «Цифровой прорыв»
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="sExperts__slide swiper-slide">
+										<div class="person-card">
+											<div class="person-card__img-wrap text-center"><img src="img/sExpert-img.png" alt="" loading="lazy"/>
+											</div>
+											<div class="person-card__content text-center">
+												<div class="person-card__name">Мансуров Олег Геннадьевич
+												</div>
+												<div class="person-card__text">Генеральный директор космической компании SR Space. Создатель и руководитель программы  по развитию предпринимательства «Преактум». 
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</section>
@@ -310,9 +418,30 @@
 				<section class="sReviews section" id="sReviews">
 					<div class="container">
 						<div class="section-title text-center">
-							<h2>sReviews</h2>
+							<h2>Отзывы участников<br>прошлого года</h2>
 						</div>
-						<div class="sReviews__row row">
+						<div class="sReviews__slider sReviews__slider--js">
+							<div class="swiper-wrapper">
+								<div class="sReviews__slide swiper-slide">
+									<div class="sReviews__item item_green">
+										<div class="sReviews__row row">
+											<div class="sReviews__col-lg-7">
+												<div class="sReviews__person"><img class="img" src="img/sExpert-img.png" alt="" loading="lazy"/>
+													<div class="text">Дмитрий Корековцев<br>супервизор 2 поток</div>
+												</div>
+											</div>
+											<div class="sReviews__col col"><img class="puzzles" src="img/puzzles.png" alt="" loading="lazy"/>
+											</div>
+										</div>
+									</div>
+									<div class="sReviews__item item_white crop-text crop-text--js">
+										<p>Уникальный способ неформального обучения, повышающий продуктивность человека - это наставничество.<br>Такой вид взаимодействия помогает расти в карьере, строить прочные отношения с окружающими, получать удовлетворение от жизни. Вот почему я согласилась участвовать в проекте и стала "Лучшим наставником". Поделюсь своим опытом на проекте. У меня было более 15 наставляемых, и каждый бизнес проект, идея участников по-своему уникальные и сильные. Больше всего в моей обратной связи и экспертном мнении нуждался Пономарев Евгений, он пришел с очень сильной идеей и чем больше мы работали, тем больше я погружалась в его бизнес.</p>
+										<p>Проект "Lion Craft" авторские изделия из натуральной кожи с целью запуска новой линейки продуктов shoper для женщин, которые все успевают и дома и на работе. Это прям про меня.</p>
+										<p>Евгений демонстрировал свои изделия, с горящими глазами рассказывал как для него это важно и почему он хочет запустить новую линейку продуктов. Фишка автора в том, что не смотря на страх, он все равно идет к своей цели.<br>И после проекта, Евгений поделился со мной, что запускает в работу смм специалиста, начинает продумывать стратегию развития личного бренда, решил уже, что именно будет делегировать в работе и обязательно пойдет на следующий поток бизнес поколения.</p>
+										<p>Я всегда давала конструктивную объективную обратную связь по запросу наставляемого, моя задача была – сохранить направление совместной работы, оставаясь в границах наставничества читать полностью..</p>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</section>
@@ -446,6 +575,7 @@
 		<script src="libs/inputmask/inputmask.min.js"> </script>
 		<script src="libs/select2/js/select2.min.js"> </script>
 		<script src="libs/select2/js/i18n/ru.js"> </script>
+		<script src="js/read-more.min.js"></script>
 		<script src="js/JSCCommon.js"></script>
 		<script src="js/common.js"></script>
 	</body>
