fix: fix slider

--- a/public/index.html
+++ b/public/index.html
@@ -441,6 +441,23 @@
 										<p>Я всегда давала конструктивную объективную обратную связь по запросу наставляемого, моя задача была – сохранить направление совместной работы, оставаясь в границах наставничества читать полностью..</p>
 									</div>
 								</div>
+								<div class="sReviews__slide swiper-slide">
+									<div class="sReviews__item item_green">
+										<div class="sReviews__row row">
+											<div class="sReviews__col-lg-7">
+												<div class="sReviews__person"><img class="img" src="img/sExpert-img.png" alt="" loading="lazy"/>
+													<div class="text">Дмитрий Корековцев<br>супервизор 2 поток</div>
+												</div>
+											</div>
+											<div class="sReviews__col col"><img class="puzzles" src="img/puzzles.png" alt="" loading="lazy"/>
+											</div>
+										</div>
+									</div>
+									<div class="sReviews__item item_white crop-text crop-text--js">
+										<p>Уникальный способ неформального обучения, повышающий продуктивность человека - это наставничество.<br>Такой вид взаимодействия помогает расти в карьере, строить прочные отношения с окружающими, получать удовлетворение от жизни. Вот почему я согласилась участвовать в проекте и стала "Лучшим наставником". Поделюсь своим опытом на проекте. У меня было более 15 наставляемых, и каждый бизнес проект, идея участников по-своему уникальные и сильные. Больше всего в моей обратной связи и экспертном мнении нуждался Пономарев Евгений, он пришел с очень сильной идеей и чем больше мы работали, тем больше я погружалась в его бизнес.</p>
+										<p>Уникальный способ неформального обучения, повышающий продуктивность человека - это наставничество.<br>Такой вид взаимодействия помогает расти в карьере, строить прочные отношения с окружающими, получать удовлетворение от жизни. Вот почему я согласилась участвовать в проекте и стала "Лучшим наставником". Поделюсь своим опытом на проекте. У меня было более 15 наставляемых, и каждый бизнес проект, идея участников по-своему уникальные и сильные. Больше всего в моей обратной связи и экспертном мнении нуждался Пономарев Евгений, он пришел с очень сильной идеей и чем больше мы работали, тем больше я погружалась в его бизнес.</p>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
