--- a/public/index.html
+++ b/public/index.html
@@ -419,6 +419,16 @@
 					<div class="container">
 						<div class="section-title text-center">
 							<h2>Отзывы участников<br>прошлого года</h2>
+							<div class="swiper-button-hand swiper-button-hand-prev swiper-button-prev">
+								<svg class="icon icon-arrow ">
+									<use xlink:href="img/svg/sprite.svg#arrow"></use>
+								</svg>
+							</div>
+							<div class="swiper-button-hand swiper-button-hand-next swiper-button-next">
+								<svg class="icon icon-arrow ">
+									<use xlink:href="img/svg/sprite.svg#arrow"></use>
+								</svg>
+							</div>
 						</div>
 						<div class="sReviews__slider sReviews__slider--js">
 							<div class="swiper-wrapper">
