--- a/public/index.html
+++ b/public/index.html
@@ -174,16 +174,6 @@
 									</div>
 								</div>
 							</div>
-							<div class="sSpeakers__col col col-lg-4">
-								<div class="card-speaker text-center">
-									<div class="card-speaker__img-wrap"><img src="img/speaker-4.png" alt="" loading="lazy"/>
-									</div>
-									<div class="card-speaker__title">Павел Вербняк
-									</div>
-									<div class="card-speaker__text">Международный тренер-консультант по личной эффективности, мотивации и психологии успеха. Основатель и руководитель проекта &quot;Успешное мышление&quot;
-									</div>
-								</div>
-							</div>
 						</div>
 					</div>
 				</section>
@@ -362,7 +352,7 @@
 								<div class="swiper-wrapper">
 									<div class="sExperts__slide swiper-slide">
 										<div class="person-card">
-											<div class="person-card__img-wrap text-center"><img src="img/sExpert-img.png" alt="" loading="lazy"/>
+											<div class="person-card__img-wrap text-center"><img src="img/speaker-2.png" alt="" loading="lazy"/>
 											</div>
 											<div class="person-card__content text-center">
 												<div class="person-card__name">Мансуров Олег Геннадьевич
@@ -374,7 +364,7 @@
 									</div>
 									<div class="sExperts__slide swiper-slide">
 										<div class="person-card">
-											<div class="person-card__img-wrap text-center"><img src="img/sExpert-img.png" alt="" loading="lazy"/>
+											<div class="person-card__img-wrap text-center"><img src="img/speaker-2.png" alt="" loading="lazy"/>
 											</div>
 											<div class="person-card__content text-center">
 												<div class="person-card__name">Мансуров Олег Геннадьевич
@@ -386,7 +376,7 @@
 									</div>
 									<div class="sExperts__slide swiper-slide">
 										<div class="person-card">
-											<div class="person-card__img-wrap text-center"><img src="img/sExpert-img.png" alt="" loading="lazy"/>
+											<div class="person-card__img-wrap text-center"><img src="img/speaker-2.png" alt="" loading="lazy"/>
 											</div>
 											<div class="person-card__content text-center">
 												<div class="person-card__name">Мансуров Олег Геннадьевич
@@ -398,7 +388,7 @@
 									</div>
 									<div class="sExperts__slide swiper-slide">
 										<div class="person-card">
-											<div class="person-card__img-wrap text-center"><img src="img/sExpert-img.png" alt="" loading="lazy"/>
+											<div class="person-card__img-wrap text-center"><img src="img/speaker-2.png" alt="" loading="lazy"/>
 											</div>
 											<div class="person-card__content text-center">
 												<div class="person-card__name">Мансуров Олег Геннадьевич
