--- a/public/index.html
+++ b/public/index.html
@@ -29,24 +29,33 @@
 			<div id="headerWrap"></div>
 			<main>
 				<!-- start headerBlock-->
-				<div class="headerBlock section" id="headerBlock">
+				<div class="headerBlock section" id="headerBlock"><img class="puzzle-top" src="img/puzzle-top.png" alt="" loading="lazy"/>
 					<div class="container">
 						<div class="headerBlock__row row">
 							<div class="headerBlock__col col-12 col-lg-8">
 								<div class="section-title">
 									<h1>Бизнес.<br>Поколение</h1>
-									<div class="sub-text"><span>Бесплатная</span> онлайн-программа по развитию предпринимательских компетенций и старту бизнеса</div>
+									<div class="sub-text"><span>Бесплатная</span>    онлайн-программа по&nbsp;старту и&nbsp;развитию бизнеса</div><a class="sParticipating__btn btn btn-success" href="https://rosmolbusiness.ru/events/a1c0e72c-8c18-43e0-8900-6658a6869c71">Принять участие
+										<div class="icon-wrap">
+											<svg class="icon icon-arrow ">
+												<use xlink:href="img/svg/sprite.svg#arrow"></use>
+											</svg>
+										</div></a>
 								</div>
 								<div class="headerBlock__block">
-									<div class="headerBlock__item">Наша миссия – помочь воплотить твою мечту или идею в реальный бизнес.
-									</div>
 									<div class="headerBlock__item">
-										<p>В «Бизнес.Поколении» действующие предприниматели, эксперты и бизнес-тренеры в онлайн-формате расскажут участникам о предпринимательской и инновационной деятельности, а также помогут запустить своё дело с нуля.</p>
-										<p>40 лучших из лучших участников в финале представят свой проект инвесторам в рамках заключительного этапа – инвестиционных сессий, и, при успешной защите, получат  консультационную и, возможно, финансовую поддержку в его реализации.</p>
+										<ul>
+											<li>7 этапов проработки твоего бизнес-плана</li>
+											<li>5 онлайн-встреч с опытными бизнес-наставниками</li>
+											<li>9 видеолекций от экспертов-практиков</li>
+											<li>12 недель практики и консультаций</li>
+											<li>40 финалистов: участников очной защиты </li>
+											<li>8 победителей в 2024 году</li>
+										</ul>
 									</div>
 								</div>
 							</div>
-							<div class="headerBlock__col col-12 col-lg-4"><img class="puzzle-orange" src="img/puzzle-orange.png" alt="" loading="lazy"/><img class="puzzles" src="img/puzzles.png" alt="" loading="lazy"/>
+							<div class="headerBlock__col col-12 col-lg-4"><img class="puzzles" src="img/head-elements.png" alt="" loading="lazy"/>
 								<div class="headerBlock__img-wrap ms-auto"><img class="img" src="img/headerBlock-img-1.png" alt="" loading="lazy"/>
 								</div>
 							</div>
@@ -328,7 +337,9 @@
 							<div class="sExperts__row row">
 								<div class="col-lg-7">
 									<h2>Очный этап</h2>
-									<p>40 лучших участников получат шанс представить свой проект представить свой проект на очной инвест-сессии перед экспертами!</p>
+									<div class="sExperts__description">
+										<p>40 лучших <img src="img/svg/arrow-circle.svg"/>участников <br/>получат шанс представить свой проект  <span>на очной</span> инвест-сессии перед экспертами!</p>
+									</div>
 								</div>
 								<div class="sExperts__col col"><img class="img" src="img/experts-img.png" alt="" loading="lazy"/>
 								</div>
@@ -430,7 +441,7 @@
 													<div class="text">Дмитрий Корековцев<br>супервизор 2 поток</div>
 												</div>
 											</div>
-											<div class="sReviews__col col"><img class="puzzles" src="img/puzzles.png" alt="" loading="lazy"/>
+											<div class="sReviews__col col"><img class="puzzles" src="img/puzzles-update.png" alt="" loading="lazy"/>
 											</div>
 										</div>
 									</div>
