--- a/public/parts/header.html
+++ b/public/parts/header.html
@@ -5,28 +5,38 @@
 	<div class="top-nav block-with-lazy">
 		<div class="container">
 			<div class="top-nav__row row">
-				<div class="col col-lg-auto z">
+				<div class="col">
 					<a class="top-nav__logo" href="/"><img src="img/svg/logo.svg" alt="" loading="lazy"/>
 					</a>
 				</div>
-				<div class="top-nav__col col-auto col-lg order-lg-0 order-last">
-					<div class="menu-mobile menu-mobile--js">
-						<div class="menu-mobile__inner">
-							<div class="toggle-menu-mobile toggle-menu-mobile--js d-lg-none"><span></span>
+			</div>
+			<div class="top-nav__inner">
+				<div class="top-nav__row row">
+					<div class="top-nav__col col-auto col-lg order-lg-0 order-last">
+						<div class="menu-mobile menu-mobile--js">
+							<div class="menu-mobile__inner">
+								<div class="toggle-menu-mobile toggle-menu-mobile--js d-lg-none"><span></span>
+								</div>
+								<nav>
+									<ul class="menu" itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
+										<li class="menu-item" itemprop="item"><a href="#sParticipating" itemprop="url">Участие</a></li>
+										<li class="menu-item" itemprop="item"><a href="#sSpeakers" itemprop="url">Спикеры</a></li>
+										<li class="menu-item" itemprop="item"><a href="#sRegistration" itemprop="url">Регистрация</a></li>
+										<li class="menu-item" itemprop="item"><a href="#sRegistration" itemprop="url">Направления</a></li>
+										<li class="menu-item" itemprop="item"><a href="#sRegistration" itemprop="url">Программа</a></li>
+										<li class="menu-item" itemprop="item"><a href="#sRegistration" itemprop="url">Очный этап</a></li>
+										<li class="menu-item" itemprop="item"><a href="#sRegistration" itemprop="url">Отзывы</a></li>
+										<li class="menu-item" itemprop="item"><a href="#sFAQ" itemprop="url">Вопросы</a></li>
+										<li class="menu-item" itemprop="item"><a href="#sFAQ" itemprop="url">Контакты</a></li>
+									</ul>
+								</nav>
 							</div>
-							<nav>
-								<ul class="menu" itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
-									<li class="menu-item" itemprop="item"><a href="#sParticipating" itemprop="url">Участие</a></li>
-									<li class="menu-item" itemprop="item"><a href="#sSpeakers" itemprop="url">Спикеры</a></li>
-									<li class="menu-item" itemprop="item"><a href="#sRegistration" itemprop="url">Регистрация</a></li>
-									<li class="menu-item" itemprop="item"><a href="#sFAQ" itemprop="url">Вопросы</a></li>
-								</ul>
-							</nav>
 						</div>
 					</div>
-				</div>
-				<div class="col-auto d-lg-none ms-auto">
-					<div class="toggle-menu-mobile toggle-menu-mobile--js d-lg-none"><span></span>
+					<div class="col-auto"><a class="btn btn-success" href="#">Зарегистрироваться</a></div>
+					<div class="col-auto d-lg-none ms-auto">
+						<div class="toggle-menu-mobile toggle-menu-mobile--js d-lg-none"><span></span>
+						</div>
 					</div>
 				</div>
 			</div>
