--- a/public/index.html
+++ b/public/index.html
@@ -324,6 +324,10 @@
 								</div>
 								<div class="dd-group__content dd-content-js">
 									<p>Вы научитесь анализировать и прорабатывать бизнес-идеи, разрабатывать бизнес-планы, проверять гипотезы и защищать свои проекты перед экспертами.</p>
+									<ul>
+										<li>Вы научитесь анализировать</li>
+									</ul>
+									<p>Вы научитесь анализировать и прорабатывать бизнес-идеи, разрабатывать бизнес-планы, проверя</p>
 								</div>
 							</div>
 						</div>
