--- a/public/parts/header.html
+++ b/public/parts/header.html
@@ -22,12 +22,12 @@
 										<li class="menu-item" itemprop="item"><a href="#sParticipating" itemprop="url">Участие</a></li>
 										<li class="menu-item" itemprop="item"><a href="#sSpeakers" itemprop="url">Спикеры</a></li>
 										<li class="menu-item" itemprop="item"><a href="#sRegistration" itemprop="url">Регистрация</a></li>
-										<li class="menu-item" itemprop="item"><a href="#sRegistration" itemprop="url">Направления</a></li>
-										<li class="menu-item" itemprop="item"><a href="#sRegistration" itemprop="url">Программа</a></li>
-										<li class="menu-item" itemprop="item"><a href="#sRegistration" itemprop="url">Очный этап</a></li>
-										<li class="menu-item" itemprop="item"><a href="#sRegistration" itemprop="url">Отзывы</a></li>
+										<li class="menu-item" itemprop="item"><a href="#sDirections" itemprop="url">Направления</a></li>
+										<li class="menu-item" itemprop="item"><a href="#sAgenda" itemprop="url">Программа</a></li>
+										<li class="menu-item" itemprop="item"><a href="#sExperts" itemprop="url">Очный этап</a></li>
+										<li class="menu-item" itemprop="item"><a href="#sReviews" itemprop="url">Отзывы</a></li>
 										<li class="menu-item" itemprop="item"><a href="#sFAQ" itemprop="url">Вопросы</a></li>
-										<li class="menu-item" itemprop="item"><a href="#sFAQ" itemprop="url">Контакты</a></li>
+										<li class="menu-item" itemprop="item"><a href="#sContact" itemprop="url">Контакты</a></li>
 									</ul>
 								</nav>
 							</div>
